--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ SCRATCH_PATH=/lustre04/scratch/qdessain/
 UKBB_T1_FOLDER=/project/rrg-jacquese/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_MRI_download/UKB_T1w
 UKBB_FMRI_FOLDER=/project/rrg-jacquese/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_MRI_download/UKB_rfMRI
 UKBB_BIDS_FOLDER=/project/rrg-jacquese/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_MRI_download/UKBB_T1w_rfMRI_BIDS_40kRelease
+UKBB_NEARLINE_ARCHIVE_FOLDER=/lustre03/nearline/6035398/giga_preprocessing_2/ukbb_fmriprep-20.2.7lts
 BATCH_SIZE=7000
 MAX_JOBS_COUNT=990
 SLURM_EMAIL=quentin.dessain@uclouvain.be
