Added giga_connectome and giga_autoqc

--- a/.env
+++ b/.env
@@ -1,14 +1,16 @@
-SCRATCH_PATH=/lustre07/scratch/qdessain/
+SCRATCH_PATH=/lustre04/scratch/qdessain/
 UKBB_T1_FOLDER=/project/rrg-jacquese/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_MRI_download/UKB_T1w
 UKBB_FMRI_FOLDER=/project/rrg-jacquese/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_MRI_download/UKB_rfMRI
 UKBB_BIDS_FOLDER=/project/rrg-jacquese/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_MRI_download/UKBB_T1w_rfMRI_BIDS_40kRelease
-UKBB_FREESURFER_FOLDER=/lustre06/project/6008022/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_PreProcessed_data_and_download/UKB_T1w/UKB_Freesufer_40k_feb2020_zip
+UKBB_FREESURFER_FOLDER=/project/rrg-jacquese/All_user_common_folder/RAW_DATA/UKBIOBANK-DATA/UKBIOBANK_IMAGING/UKB_PreProcessed_data_and_download/UKB_T1w/UKB_Freesufer_40k_feb2020_zip
 UKBB_NEARLINE_ARCHIVE_FOLDER=/lustre03/nearline/6035398/giga_preprocessing_2/ukbb_fmriprep-20.2.7lts
-BATCH_SIZE=5000
-MAX_JOBS_COUNT=200
+BATCH_SIZE=0
+MAX_JOBS_COUNT=990
 SLURM_EMAIL=quentin.dessain@uclouvain.be
 USERNAME=qdessain
-RESSOURCE_ACCOUNT=rrg-jacquese
-CLUSTER_NAME=narval
-COMPLEMENTARY_CLUSTER_NAME=beluga
-COMPLEMENTARY_CLUSTER_LOGIN=qdessain@beluga.calculcanada.ca:/lustre04/scratch/qdessain/ukbb/scripts/data/active_subjects_beluga.json
+RESSOURCE_ACCOUNT=rrg-pbellec
+CLUSTER_NAME=beluga
+COMPLEMENTARY_CLUSTER_NAME=narval
+COMPLEMENTARY_CLUSTER_LOGIN=qdessain@narval.calculcanada.ca:/lustre07/scratch/qdessain/ukbb/scripts/data/active_subjects_narval.json
+OUTSIDE_CLUSTER_NAME=manneback
+OUTSIDE_CLUSTER_LOGIN=qdessain@manneback:/home/ucl/elen/qdessain/scratch_qdessain/ukbb/scripts/data/active_subjects_manneback.json
